<resources>
    <string name="app_name">Unilia Social Hub</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_number">Registration Number</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="year_of_study">Year of Study</string>
    <string name="semester">Semester</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="user_details">User Details</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_social_hub_by_madalo_perenje">Welcome to Social Hub by Madalo Perenje</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="or_login_with">or login with</string>
    <string name="i_forgot_my_passowrd">I forgot my passowrd</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="back">Back</string>
</resources>