<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_account_circle" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:hint="Username"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userpassword_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:textColorHint="@android:color/white"
            android:textSize="20sp" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:text="Register"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:onClick="onFacebookClick"
                android:src="@drawable/facebook_icon"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:onClick="onTwitterClick"
                android:src="@drawable/twitter_x_new_logo_x_rounded_icon_256078"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:onClick="onGoogleCilck"
                android:src="@drawable/google_icon"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <!-- add click event for login text view -->
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>
